--- a/Program/PlotterHelper/Properties/launchSettings.json
+++ b/Program/PlotterHelper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PlotterHelper": {
       "commandName": "Project",
-      "commandLineArgs": "-s D:\\TEMP\\Text_3.hpgl"
+      "commandLineArgs": "-c -s D:\\TEMP\\Text_3.hpgl"
     }
   }
 }
