Added 3D prints and changes for version 1.0

--- a/Program/PlotterHelper/Properties/launchSettings.json
+++ b/Program/PlotterHelper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PlotterHelper": {
       "commandName": "Project",
-      "commandLineArgs": "-c -s D:\\TEMP\\Text_3.hpgl"
+      "commandLineArgs": "-cs -s COM4;9600;N;8;1 D:\\TEMP\\WindowsLogos\\Logos.hpgl"
     }
   }
 }
