--- a/Program/PlotterHelper/PlotterHelper.csproj
+++ b/Program/PlotterHelper/PlotterHelper.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <Version>0.1</Version>
+    <AssemblyName>PlotterHelper</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
